fixed the CSS overlap and login page navigation

--- a/src/Components/styles/login.module.css
+++ b/src/Components/styles/login.module.css
@@ -4,9 +4,9 @@
     box-sizing: border-box;
 }
 
-body {
+.container {
     display: grid;
-    height: 100%;
+    height: 100vh;
     width: 100%;
     place-items: center;
     background: #e6e8e6;
